# rnabridge-align

./: .gitignore  LICENSE  README.md  configure.bioconda.ac  configure.linux.ac  configure.mac.ac
src/: Makefile.am  bridger.cc  bridger.h  bundle2.cc  bundle2.h  bundle_base.cc  bundle_base.h  config.cc  config.h  coral.cc  coral.h  edge_info.cc  edge_info.h  fcluster.cc  fcluster.h  fragment.cc  fragment.h  hit.cc  hit.h  hyper_node.cc  hyper_node.h  interval_map.cc  interval_map.h  junction.cc  main.cc  partial_exon.cc  partial_exon.h  path.cc  path.h  previewer.cc  previewer.h  reference.cc  reference.h  region.cc  region.h  rnabridge.cc  rnabridge.h  splice_graph.cc  splice_graph.h  vertex_info.cc  (+1 more)
